Revert option that breaks on Java 11
Caused by a testing error.